fix the double scroll bar

--- a/client/stylesheets/fb_slidemenu.css
+++ b/client/stylesheets/fb_slidemenu.css
@@ -96,7 +96,7 @@ body .viewport .frame .menu .nav-stacked {
 
 body .viewport .frame .view {
   height: 100%;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 body .viewport .frame .view .navbar .navbar-inner .btn-navbar {
